# PixelForge

./: .gitignore  ARCHITECTURE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-opencv.yml  build.yml  opencv-static.yml
scripts/opencv/: README.md  build-unix.sh  build-windows.ps1  package_artifact.py
scripts/opencv/smoke/: CMakeLists.txt  main.cpp
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clear_inpaint.rs  clear_patch.rs  clear_telea.rs  lib.rs  main.rs
src/components/: BatchDrawer.vue  DateTimeCalendar.vue  EditorCanvas.vue  FieldList.vue  GenerationToast.vue  PreviewModal.vue  PropertyPanel.vue  ThemeController.vue  UnsavedChangesDialog.vue
src/stores/: export.ts  feedback.ts  preview.ts  template.ts  unsavedChanges.ts
src/types/: template.ts
src/utils/: dateTime.ts  theme.ts
