[package]
name = "pixelforge"
version = "0.1.0"
description = "Lightweight PNG/JPEG template editor and PNG batch generator"
authors = ["Tomspter"]
edition = "2024"

[lib]
name = "pixel_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
base64 = "0.22"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.25"
ab_glyph = "0.2"
csv = "1.3"
rand = "0.9"
thiserror = "2"
