[package]
name = "pixelforge"
version = "0.1.0"
description = "Lightweight PNG/JPEG template editor and PNG batch generator"
authors = ["Tomspter"]
edition = "2024"

[lib]
name = "pixel_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
base64 = "0.22"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.25"
inpaint = { version = "0.1.7", default-features = false, features = ["std", "image"] }
ab_glyph = "0.2"
csv = "1.3"
rand = "0.9"
thiserror = "2"


[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true # 启用链接时优化。
opt-level = "s" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort" # 通过禁用 panic 处理程序来提高性能。
strip = true # 确保移除调试符号。
